syntax = "proto3";
package rpmpb;
option go_package = "github.com/tempcke/rpm/api/rpc/pb";

message Property {
  string propertyID = 1;
  string street = 2;
  string city = 3;
  string state = 4;
  string zip = 5;
}
message StorePropertyReq {
  Property property = 1; // uuid generated when omitted
}
message StorePropertyRes {
  string propertyID = 1;
}
message GetPropertyReq {
  string propertyID = 1;
}
message GetPropertyRes {
  Property property = 1;
}
message RemovePropertyReq {
  string propertyID = 1;
}
message RemovePropertyRes {}
message ListPropertiesReq {
  string search = 1;
}

message Tenant {
  string tenantID = 1;
  string fullName = 2;
  string dlNum = 3;
  string dlState = 4;
  string dob = 5; // date of birth, ex: "2006-01-02"
  repeated Phone phones = 6;
}
message Phone {
  string number = 1;
  string note = 2;
}
message StoreTenantReq {
  Tenant tenant = 1; // uuid generated when omitted
}
message StoreTenantRes {
  string tenantID = 1;
}
message GetTenantReq {
  string tenantID = 1;
}
message GetTenantRes {
  Tenant tenant = 1;
}
message ListTenantsReq {}

service RPM {
  rpc StoreProperty(StorePropertyReq) returns (StorePropertyRes);
  rpc GetProperty(GetPropertyReq) returns (GetPropertyRes);
  rpc RemoveProperty(RemovePropertyReq) returns (RemovePropertyRes);
  rpc ListProperties(ListPropertiesReq) returns (stream Property);

  rpc StoreTenant(StoreTenantReq) returns (StoreTenantRes);
  rpc GetTenant(GetTenantReq) returns (GetTenantRes);
  rpc ListTenants(ListTenantsReq) returns (stream Tenant);
}